docs: update swagger api doc
