# routes/upload.js
@@ -7,6 +7,16 @@ const { isAuth } = require('../middleware/auth');
 const { uploadImg } = require('../middleware/upload');
 const { uploadLimiter } = require('../middleware/rateLimit');
 
-router.post('/upload/imgur', isAuth, uploadLimiter, uploadImg, handleErrorAsync(uploadControllers.uploadImgur));
+router.post('/upload/imgur', isAuth, uploadLimiter, uploadImg, handleErrorAsync(async (req, res, next) => {
+  /**
+   * #swagger.tags = ['Upload']
+   * #swagger.summary = 'Upload file to imgur'
+   * #swagger.security = [{
+      "apiKeyAuth": []
+    }]
+   */
+
+  uploadControllers.uploadImgur(req, res, next);
+}));
 
 module.exports = router;
